--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
-    <meta name="description" content="Pagina Web de muestra, sobre un desarrollador.">
-    <meta name="keywords" content="web, contact,aboutme, development, front end, user, briefcase">
+    <meta
+      name="description"
+      content="Pagina Web de muestra, sobre un desarrollador."
+    />
+    <meta
+      name="keywords"
+      content="web, contact,aboutme, development, front end, user, briefcase"
+    />
     <title>EliteDev</title>
   </head>
   <body>
@@ -21,7 +27,8 @@
         <p>Front End Jr.</p>
         <ul class="nav__ul">
           <li><a href="#about__me">About me</a></li>
-          <li><a href="">Briefcase</a></li>
+          <li><a href="#">Briefcase</a></li>
+          <li><a href="">Skills</a></li>
           <li><a href="">Contact</a></li>
         </ul>
         <svg
@@ -72,7 +79,9 @@
             <a href="https://elitedev.github.io/App-IMC/" target="_blank"
               ><img src="./img/imc.webp" alt="App de Bmi"
             /></a>
-            <a href="https://elitedev.github.io/Online-Shop-Main/" target="_blank"
+            <a
+              href="https://elitedev.github.io/Online-Shop-Main/"
+              target="_blank"
               ><img src="./img/Shop.webp" alt="Tienda de instrumentos"
             /></a>
             <a href="https://elitedev.github.io/Toggle/" target="_blank"
@@ -82,37 +91,58 @@
               ><img src="./img/Medical-App.webp" alt="App de consultorio"
             /></a>
           </div>
-          <svg
-            preserveAspectRatio="none"
-            class="port__wave"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1440 320"
-          >
-            <path
-              fill="#3A9ACA"
-              fill-opacity="1"
-              d="M0,128L48,128C96,128,192,128,288,128C384,128,480,128,576,117.3C672,107,768,85,864,101.3C960,117,1056,171,1152,181.3C1248,192,1344,160,1392,144L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-            ></path>
-          </svg>
         </div>
       </main>
+    </section>
+    <section>
+      <div class="skills__container">
+        <h2>My Skills</h2>
+        <div class="skills__info">
+          <i class="fa-brands fa-html5"></i>
+          <i class="fa-brands fa-css3-alt"></i>
+          <i class="fa-brands fa-sass"></i>
+          <i class="fa-brands fa-square-js"></i>
+          <i class="fa-brands fa-git"></i>
+          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-swift"></i>
+        </div>
+        <svg
+        preserveAspectRatio="none"
+        class="port__wave"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1440 320"
+      >
+        <path
+          fill="#3A9ACA"
+          fill-opacity="1"
+          d="M0,128L48,128C96,128,192,128,288,128C384,128,480,128,576,117.3C672,107,768,85,864,101.3C960,117,1056,171,1152,181.3C1248,192,1344,160,1392,144L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+      </div>
     </section>
     <section>
       <div class="contact__container">
         <div class="contact__info">
           <h2>Contact</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, <br>
-            dignissimos nulla laborum atque minus quam mollitia ipsum nisi? <br>
-            Tenetur consectetur, exercitationem aliquam fugit voluptatem natus <br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit,
+            <br />
+            dignissimos nulla laborum atque minus quam mollitia ipsum nisi?
+            <br />
+            Tenetur consectetur, exercitationem aliquam fugit voluptatem natus
+            <br />
             fuga reiciendis pariatur sint earum.
           </p>
-          <img src="./img/Sending emails_Monochromatic.svg" alt="">
+          <img src="./img/Sending emails_Monochromatic.svg" alt="" />
         </div>
         <div class="contact__form">
           <form action="">
             <label for="email"
-              >Email<input type="email" name="email" id="email" placeholder="micorreo@mail.com"
+              >Email<input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="micorreo@mail.com"
             /></label>
             <label for="password"
               >Description<input type="text" name="password" id="password"
@@ -123,5 +153,9 @@
         <div class="contact__info"></div>
       </div>
     </section>
+    <script
+      src="https://kit.fontawesome.com/70436840f7.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
