--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       <nav>
         <img
           class="nav__img"
-          src="./img/Avatar-Garce-tematico-bellaka.jpg"
+          src="./img/Avatar-Garce-tematico-bellaka2.jpg"
           alt=""
         />
         <h1>Dev. Andrés García</h1>
         <p>Front End Jr.</p>
         <ul class="nav__ul">
           <li><a href="#about__me">About me</a></li>
-          <li><a href="#">Briefcase</a></li>
-          <li><a href="">Skills</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#briefcase">Briefcase</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         <svg
           preserveAspectRatio="none"
@@ -55,17 +55,12 @@
         <div class="about__info">
           <h2 id="about__me">About Me</h2>
           <p>
-            Mi nombre es Andrés García Chávez, originario de Ensenada, Baja
-            California. México. Soy un desarrollador Front End jr, apasionado
-            por la tecnología y nuevos aprendizajes, tambien soy productor
-            audiovisual y me apasiona la musica. Mis mayores cualidades son ser
-            responsable, proactivo, ordenado y dedidaco a lo que hago. Manejo
-            tecnologías como Html, CSS, JavaScript, Sass, Swift, SwiftUi.
+            My name is Andrés García Chávez, I am 23 years old, originally from Ensenada, Baja California. Mexico. I am a Front End jr developer, with 1 year of self-taught experience, passionate about technology and new learning, I am currently studying the Full Stack Developer career at Coder House, my level of English is currently basic, I am also an audiovisual producer and I am passionate about music. My greatest qualities are to be responsible, proactive, orderly and dedicated to what I do. I handle technologies such as Html, CSS, JavaScript, Sass, and in learning: Swift, SwiftUi, mySQL.
           </p>
         </div>
       </div>
     </section>
-    <section .scale-up-center>
+    <section id="briefcase">
       <main>
         <div class="portafolio__container">
           <h3>Portafolio</h3>
@@ -94,7 +89,7 @@
         </div>
       </main>
     </section>
-    <section>
+    <section id="skills">
       <div class="skills__container">
         <h2>My Skills</h2>
         <div class="skills__info">
@@ -120,19 +115,11 @@
       </svg>
       </div>
     </section>
-    <section>
+    <section id="contact">
       <div class="contact__container">
         <div class="contact__info">
           <h2>Contact</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit,
-            <br />
-            dignissimos nulla laborum atque minus quam mollitia ipsum nisi?
-            <br />
-            Tenetur consectetur, exercitationem aliquam fugit voluptatem natus
-            <br />
-            fuga reiciendis pariatur sint earum.
-          </p>
+          <p>Send me an email to acquire my services!.</p> 
           <img src="./img/Sending emails_Monochromatic.svg" alt="" />
         </div>
         <div class="contact__form">
